syntax = "proto3";

option go_package = "gateway/proto-files/tours";

package tours;

message TourForCreation {
    string name = 1;
    string description = 2;
    string difficulty = 3;
    repeated string tags = 4;
}

message KeypointForCreation {
    string name = 1;
    string description = 2;
    string image_url = 3;
    double latitude = 4;
    double longitude = 5;
    int32 ordinal = 6;
}

message CreateTourRequest {
    TourForCreation tour = 1;
    repeated KeypointForCreation keypoints = 2;
    int32 user_id = 3;
}

message CreateTourResponse {
    int32 id = 1;
}

service TourService {
    rpc CreateTour(CreateTourRequest) returns (CreateTourResponse);
}

service ToursService {
    rpc CreateTour(CreateTourRequest) returns (CreateTourResponse);
}